testing with properties

--- a/configserver/src/main/resources/application.properties
+++ b/configserver/src/main/resources/application.properties
@@ -2,7 +2,8 @@ spring.application.name=configserver
 spring.profiles.active=git
 #spring.profile.active=git
 #spring.cloud.config.server.native.search-locations=classpath:/config
-spring.cloud.config.server.git.uri=https://github.com/AntonioDiaz/microservices-config.git
+spring.cloud.config.server.git.uri=https://github.com/AntonioDiaz/playing_spring_microservices.git
 spring.cloud.config.server.git.clone-on-start=true
 spring.cloud.config.server.git.default-label=master
+spring.cloud.config.server.git.search-paths=config
 server.port=8071
