--- a/cards/src/main/resources/application.properties
+++ b/cards/src/main/resources/application.properties
@@ -5,3 +5,8 @@ info.app.description=My first microservice for cards.
 info.app.version=1.0.0
 management.info.java.enabled=true
 management.info.env.enabled=true
+
+
+spring.application.name=cards
+spring.profiles.active=dev
+spring.config.import=optional:configserver:http://localhost:8071
