--- a/cards/pom.xml
+++ b/cards/pom.xml
@@ -12,7 +12,7 @@
     <artifactId>cards</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>cards</name>
-    <description>Microservice for cars</description>
+    <description>Microservice for cards</description>
     <properties>
         <java.version>17</java.version>
         <spring-cloud.version>2021.0.5</spring-cloud.version>
@@ -29,6 +29,10 @@
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-config</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-bootstrap</artifactId>
         </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
@@ -59,7 +63,7 @@
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <configuration>
                     <image>
-                        <name>adiaz/${project.artifactId}</name>
+                        <name>adiazarroyo/${project.artifactId}</name>
                     </image>
                     <excludes>
                         <exclude>
