--- a/cards/src/main/resources/application.properties
+++ b/cards/src/main/resources/application.properties
@@ -6,7 +6,4 @@ info.app.version=1.0.0
 management.info.java.enabled=true
 management.info.env.enabled=true
 
-
-spring.application.name=cards
-spring.profiles.active=dev
-spring.config.import=optional:configserver:http://localhost:8071
+#spring.profiles.active=dev
