--- a/loans/src/main/resources/application.properties
+++ b/loans/src/main/resources/application.properties
@@ -7,5 +7,5 @@ management.info.java.enabled=true
 management.info.env.enabled=true
 
 spring.application.name=loans
-spring.profiles.active=prod
+spring.profiles.active=dev
 spring.config.import=optional:configserver:http://localhost:8071
