--- a/configserver/src/main/resources/bootstrap.yml
+++ b/configserver/src/main/resources/bootstrap.yml
@@ -2,7 +2,7 @@ server:
   port: 8071
 spring:
   application:
-    name: config-server
+    name: configserver
   cloud:
     config:
       server:
