--- a/docker-compose/dev/docker-compose.yml
+++ b/docker-compose/dev/docker-compose.yml
@@ -27,43 +27,43 @@ services:
       SPRING_PROFILES_ACTIVE: dev
       SPRING_CONFIG_IMPORT: configserver:http://configserver:8071/
 
-  loans:
-    image: adiazarroyo/loans:latest
-    mem_limit: 700m
-    ports:
-      - "8081:8100"
-    networks:
-      - adiaz-network
-    depends_on:
-      - configserver
-    deploy:
-      restart_policy:
-        condition: on-failure
-        delay: 5s
-        max_attempts: 10
-        window: 240s
-    environment:
-      SPRING_PROFILES_ACTIVE: dev
-      SPRING_CONFIG_IMPORT: configserver:http://configserver:8071/      
+  # loans:
+  #   image: adiazarroyo/loans:latest
+  #   mem_limit: 700m
+  #   ports:
+  #     - "8081:8100"
+  #   networks:
+  #     - adiaz-network
+  #   depends_on:
+  #     - configserver
+  #   deploy:
+  #     restart_policy:
+  #       condition: on-failure
+  #       delay: 10s
+  #       max_attempts: 10
+  #       window: 240s
+  #   environment:
+  #     SPRING_PROFILES_ACTIVE: dev
+  #     SPRING_CONFIG_IMPORT: configserver:http://configserver:8071/      
 
-  cards:
-    image: adiazarroyo/cards:latest
-    mem_limit: 700m
-    ports:
-      - "8082:8200"
-    networks:
-      - adiaz-network
-    depends_on:
-      - configserver
-    deploy:
-      restart_policy:
-        condition: on-failure
-        delay: 5s
-        max_attempts: 10
-        window: 240s
-    environment:
-      SPRING_PROFILES_ACTIVE: dev
-      SPRING_CONFIG_IMPORT: configserver:http://configserver:8071/ 
+  # cards:
+  #   image: adiazarroyo/cards:latest
+  #   mem_limit: 700m
+  #   ports:
+  #     - "8082:8200"
+  #   networks:
+  #     - adiaz-network
+  #   depends_on:
+  #     - configserver
+  #   deploy:
+  #     restart_policy:
+  #       condition: on-failure
+  #       delay: 15s
+  #       max_attempts: 10
+  #       window: 240s
+  #   environment:
+  #     SPRING_PROFILES_ACTIVE: dev
+  #     SPRING_CONFIG_IMPORT: configserver:http://configserver:8071/ 
 
 networks:
   adiaz-network:
