--- a/cards/src/main/resources/application.properties
+++ b/cards/src/main/resources/application.properties
@@ -6,4 +6,6 @@ info.app.version=1.0.0
 management.info.java.enabled=true
 management.info.env.enabled=true
 
-#spring.profiles.active=dev
+spring.application.name=cards
+spring.profiles.active=dev
+spring.config.import=optional:configserver:http://localhost:8072
