--- a/accounts/src/main/resources/application.properties
+++ b/accounts/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=8000
-management.endpoints.web.exposure.include=*
+management.endpoints.web.exposure.include=health,info,refresh
 info.app.name=Microservice for ACCOUNTS
 info.app.description=My first microservice for accounts.
 info.app.version=1.0.0
