--- a/eureka_server/src/main/resources/application.properties
+++ b/eureka_server/src/main/resources/application.properties
@@ -1,2 +1,2 @@
-spring.application.name=eureka
+spring.application.name=eurekaserver
 spring.config.import=optional:configserver:http://localhost:8071
