--- a/accounts/src/main/resources/application.properties
+++ b/accounts/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=8000
-management.endpoints.web.exposure.include=health,info,refresh
+management.endpoints.web.exposure.include=*
 info.app.name=Microservice for ACCOUNTS
 info.app.description=My first microservice for accounts.
 info.app.version=1.0.0
@@ -9,3 +9,12 @@ management.info.env.enabled=true
 spring.application.name=accounts
 spring.profiles.active=dev
 spring.config.import=optional:configserver:http://localhost:8071
+
+eureka.instance.preferIpAdress = true
+eureka.client.registerWithEureka = true
+eureka.client.fetchRegistry = true
+eureka.client.serviceUrl.defaultZone = http://localhost:8070/eureka/
+
+
+endpoints.shutdown.enabled = true
+management.endpoint.shutdown.enabled = true
