--- a/cards/src/main/resources/application.properties
+++ b/cards/src/main/resources/application.properties
@@ -1,11 +1,22 @@
 server.port=8200
-management.endpoints.web.exposure.include=health,info
+
 info.app.name=Microservice for CARDS
 info.app.description=My first microservice for cards.
 info.app.version=1.0.0
+
+management.endpoints.web.exposure.include = *
+management.endpoint.shutdown.enabled = true
+
 management.info.java.enabled=true
 management.info.env.enabled=true
+
+endpoints.shutdown.enabled = true
 
 spring.application.name=cards
 spring.profiles.active=dev
 spring.config.import=optional:configserver:http://localhost:8072
+
+eureka.instance.preferIpAdress = true
+eureka.client.registerWithEureka = true
+eureka.client.fetchRegistry = true
+eureka.client.serviceUrl.defaultZone = http://localhost:8070/eureka/
