--- a/loans/src/main/resources/application.properties
+++ b/loans/src/main/resources/application.properties
@@ -1,11 +1,21 @@
 server.port=8100
-management.endpoints.web.exposure.include=health,info
 info.app.name=Microservice for LOANS
 info.app.description=My first microservice for loans.
 info.app.version=1.0.0
+
+management.endpoints.web.exposure.include=*
 management.info.java.enabled=true
 management.info.env.enabled=true
+management.endpoint.shutdown.enabled = true
 
 spring.application.name=loans
 spring.profiles.active=dev
 spring.config.import=optional:configserver:http://localhost:8071
+
+
+eureka.instance.preferIpAdress = true
+eureka.client.registerWithEureka = true
+eureka.client.fetchRegistry = true
+eureka.client.serviceUrl.defaultZone = http://localhost:8070/eureka/
+
+endpoints.shutdown.enabled = true
