Add call from one microservice to another

--- a/cards/src/main/resources/application.properties
+++ b/cards/src/main/resources/application.properties
@@ -4,6 +4,14 @@ info.app.name=Microservice for CARDS
 info.app.description=My first microservice for cards.
 info.app.version=1.0.0
 
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=password
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.h2.console.enabled=true
+spring.jpa.defer-datasource-initialization=true
+
 management.endpoints.web.exposure.include = *
 management.endpoint.shutdown.enabled = true
 
@@ -14,7 +22,7 @@ endpoints.shutdown.enabled = true
 
 spring.application.name=cards
 spring.profiles.active=dev
-spring.config.import=optional:configserver:http://localhost:8072
+spring.config.import=optional:configserver:http://localhost:8071
 
 eureka.instance.preferIpAdress = true
 eureka.client.registerWithEureka = true
