--- a/docker_compose/default/docker-compose.yml
+++ b/docker_compose/default/docker-compose.yml
@@ -8,11 +8,11 @@ services:
     networks:
       - adiaz-network
 
-  accounts:
-    image: adiazarroyo/accounts:latest
+  eurekaserver:
+    image: adiazarroyo/eurekaserver:latest
     mem_limit: 700m
     ports:
-      - "8080:8000"
+      - "8070:8070"
     networks:
       - adiaz-network
     depends_on:
@@ -27,6 +27,27 @@ services:
       SPRING_PROFILES_ACTIVE: default
       SPRING_CONFIG_IMPORT: configserver:http://configserver:8071/
 
+  accounts:
+    image: adiazarroyo/accounts:latest
+    mem_limit: 700m
+    ports:
+      - "8080:8000"
+    networks:
+      - adiaz-network
+    depends_on:
+      - configserver
+      - eurekaserver
+    deploy:
+      restart_policy:
+        condition: on-failure
+        delay: 5s
+        max_attempts: 3
+        window: 240s
+    environment:
+      SPRING_PROFILES_ACTIVE: default
+      SPRING_CONFIG_IMPORT: configserver:http://configserver:8071/
+      EUREKA_CLIENT_SERVICEURL_DEFAULTZONE: http://eurekaserver:8070/eureka
+
   loans:
     image: adiazarroyo/loans:latest
     mem_limit: 700m
@@ -36,6 +57,7 @@ services:
       - adiaz-network
     depends_on:
       - configserver
+      - eurekaserver
     deploy:
       restart_policy:
         condition: on-failure
@@ -45,6 +67,7 @@ services:
     environment:
       SPRING_PROFILES_ACTIVE: default
       SPRING_CONFIG_IMPORT: configserver:http://configserver:8071/
+      EUREKA_CLIENT_SERVICEURL_DEFAULTZONE: http://eurekaserver:8070/eureka
 
   cards:
     image: adiazarroyo/cards:latest
@@ -55,6 +78,7 @@ services:
       - adiaz-network
     depends_on:
       - configserver
+      - eurekaserver
     deploy:
       restart_policy:
         condition: on-failure
@@ -64,5 +88,7 @@ services:
     environment:
       SPRING_PROFILES_ACTIVE: default
       SPRING_CONFIG_IMPORT: configserver:http://configserver:8071/
+      EUREKA_CLIENT_SERVICEURL_DEFAULTZONE: http://eurekaserver:8070/eureka
+
 networks:
   adiaz-network:
