--- a/config/eurekaserver.properties
+++ b/config/eurekaserver.properties
@@ -3,4 +3,4 @@ server.port=8070
 eureka.instance.hostname=localhost
 eureka.client.registerWithEureka=false
 eureka.client.fetchRegistry=false
-eureka.client.serviceUrl.defaultZone=http://${eureka.instance.hostname}:${server.port}/wweureka/
+eureka.client.serviceUrl.defaultZone=http://${eureka.instance.hostname}:${server.port}/eureka/
