--- a/gateway_service/src/main/resources/application.yml
+++ b/gateway_service/src/main/resources/application.yml
@@ -1,5 +1,3 @@
-server:
-  port: 8300
 spring:
   cloud:
     gateway:
@@ -9,7 +7,7 @@ spring:
   config:
     import: optional:configserver:http://localhost:8071
   application:
-    name: accounts
+    name: gatewayserver
 info:
   app:
     name: Gateway Server Microservice
