--- a/gateway_service/src/main/resources/application.yml
+++ b/gateway_service/src/main/resources/application.yml
@@ -4,6 +4,7 @@ spring:
       discovery:
         locator:
           enabled: true
+          lowerCaseServiceId: true
   config:
     import: optional:configserver:http://localhost:8071
   application:
