--- a/accounts/src/main/resources/application.properties
+++ b/accounts/src/main/resources/application.properties
@@ -18,3 +18,6 @@ eureka.client.serviceUrl.defaultZone = http://localhost:8070/eureka/
 
 endpoints.shutdown.enabled = true
 management.endpoint.shutdown.enabled = true
+
+spring.sleuth.sampler.percentage=1
+spring.zipkin.baseurl=http://localhost:9411/
