--- a/cards/src/main/resources/application.properties
+++ b/cards/src/main/resources/application.properties
@@ -28,3 +28,6 @@ eureka.instance.preferIpAdress = true
 eureka.client.registerWithEureka = true
 eureka.client.fetchRegistry = true
 eureka.client.serviceUrl.defaultZone = http://localhost:8070/eureka/
+
+spring.sleuth.sampler.percentage=1
+spring.zipkin.baseurl=http://localhost:9411/
